--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </header>
     <nav>
         <button onclick="showStory(0)">Králičí království a sluneční amulet</button>
-        <button onclick="showStory(1)">Story 2</button>
+        <button onclick="showStory(1)">Kouzelný les přání</button>
         <button onclick="showStory(2)">Story 3</button>
     </nav>
     <main>
@@ -113,9 +113,31 @@
 
         </div>
         <div id="story2" class="story">
-            <h2>The Brave Little Sailboat</h2>
-            <img src="/placeholder.svg?height=300&width=500" alt="Little Sailboat">
-            <p>In a cozy harbor nestled along the coast, a small red and white sailboat named Pip bobbed gently in the waves. While the larger boats boasted of their grand adventures on the high seas, Pip dreamed of one day sailing beyond the safety of the bay...</p>
+            <h2>Kouzelný les přání</h2>
+            <p>Byl jednou jeden kouzelný les, o kterém si všichni šeptali, že tam roste Strom přání. Místní děti o něm slýchaly už roky, ale nikdo přesně nevěděl, kde je, ani jestli opravdu existuje. Jednoho podzimního dne, kdy les vypadal jako záplava zlatých a rudých listů, se čtyři kamarádi – Terezka, Jakub, Eliška a Filip – rozhodli les prozkoumat. Slyšeli, že když někdo najde Strom přání, může si přát jedno přání za den, ale každé přání s sebou nese nějaký důsledek. Většina dospělých říkala, že je to jen povídačka, ale děti tomu chtěly přijít na kloub.</p>
+
+            <img src="les1.webp" alt="Deti v lese" style="height: 300px">
+
+            <p>Po několika hodinách bloudění mezi hustými stromy konečně objevily zvláštní místo. Uprostřed mýtiny, kde slunce prosvítalo skrze koruny stromů, stál obrovský strom s listy, které zářily všemi barvami duhy. Když děti přišly blíž, uslyšely tichý, melodický hlas, který jim pošeptal: „Kdo mě najde, může si přát, ale mějte na paměti, že každé přání přináší svůj následek.“</p>
+            
+            <img src="les2.webp" alt="Deti v lese" style="height: 300px">
+
+            <p>Děti se nadšeně podívaly na sebe a bez dlouhého rozmýšlení se rozhodly zkusit své štěstí. První se osmělil Jakub. „Přeji si, abych uměl létat!“ zvolal nadšeně. Sotva to dořekl, začal se vznášet nad zemí a smál se radostí. Ale jen o pár okamžiků později začal padat, protože zjistil, že nemůže létat nad zemí výš než metr. I přesto, že bylo létání omezující, Jakub byl nadšený, že zažil ten pocit.</p>
+
+            <p>Druhý den přišla řada na Terezku. Pořád myslela na to, jak by bylo krásné mít spoustu sladkostí, a tak si přála obrovskou hromadu čokolád, bonbónů a dortíků. Strom přání její přání splnil a všichni se radovali z lahůdek. Ale když snědli první bonbóny, zjistili, že čokoláda má zvláštní příchuť – chutnala po trávě a šiškách. Děti se smály a i přes zvláštní chuť sladkostí snědly, co mohly. Naučily se, že i když něco vypadá lákavě, nemusí to být tak dokonalé, jak si představovaly.</p>
+
+            <p>Třetí den se přání ujal Filip. Byl nejmladší a vždycky si přál být velký a silný jako jeho starší bratři. „Přeji si, abych byl hned dospělý,“ řekl. Najednou se před nimi objevil jako dospělý muž, vysoký a statný. Kamarádi zůstali v údivu. Ale hned si Filip uvědomil, že být dospělý není tak snadné. Cítil se těžký, unavený a nezvyklý na svou novou sílu. Nemohl se bavit jako dřív, hrát si a smát se s ostatními. Po několika hodinách prosil Strom přání, aby ho proměnil zpět, a Strom mu vyhověl. Filip se poučil, že všechno má svůj čas a že být dítětem je taky důležité.</p>
+            
+            <img src="les3.webp" alt="Deti u stromu" style="height: 500px">
+
+            <p>Čtvrtý den přišla na řadu Eliška. Bála se přání vyslovit, ale přesto se odhodlala. „Přeji si, abychom zůstali kamarádi napořád,“ řekla. Strom se zhluboka rozzářil a listy na něm šustily jako vesele hrající hudba. Děti se na sebe usmály a pocítily zvláštní pouto, které je spojovalo.</p>
+
+            <p>Když ale druhý den Jakub omylem spadl a odřel si koleno, všichni kamarádi ucítili stejnou bolest, jako by se jim to stalo také. A když se Terezka rozplakala nad rozbitou hračkou, všechny děti zaplavila stejná vlna smutku. Zjistily, že Eliščino přání sice posílilo jejich přátelství, ale zároveň je spojilo natolik, že začaly cítit vše, co ostatní.</p>
+
+            <p>Děti nejprve nevěděly, jestli je to dar, nebo prokletí. Musely se naučit jeden na druhého dávat pozor a starat se, aby nikdo neprožíval příliš velké trápení. Přineslo jim to nové porozumění a pocit sounáležitosti, ale také odpovědnost. A tak pochopily, že i u přátelství je důležité mít rovnováhu, aby mohly prožívat společné radosti i bolesti, ale zároveň zůstat samy sebou.</p>
+
+            <p>Od té doby byly jejich dny plné nejen legrace a dobrodružství, ale i ohleduplnosti a pochopení.</p>
+
         </div>
         <div id="story3" class="story">
             <h2>The Time-Traveling Teddy Bear</h2>
