--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <nav>
         <button onclick="showStory(0)">Králičí království a sluneční amulet</button>
         <button onclick="showStory(1)">Story 2</button>
-        <button onclick="showStory(2)">Story 3</button>
+        <button onclick="showStory(2)">Kouzelný deštník</button>
     </nav>
     <main>
         <div id="story1" class="story active">
@@ -118,9 +118,26 @@
             <p>In a cozy harbor nestled along the coast, a small red and white sailboat named Pip bobbed gently in the waves. While the larger boats boasted of their grand adventures on the high seas, Pip dreamed of one day sailing beyond the safety of the bay...</p>
         </div>
         <div id="story3" class="story">
-            <h2>The Time-Traveling Teddy Bear</h2>
-            <img src="/placeholder.svg?height=300&width=500" alt="Teddy Bear">
-            <p>In a dusty attic filled with forgotten treasures, an old teddy bear named Chronos sat on a shelf, his button eyes gleaming with secrets. Unbeknownst to his young owner, Chronos possessed the extraordinary ability to travel through time...</p>
+            <h2>Kouzelný deštník</h2>
+            <p>Jednoho dne, když se Tomáš vracel ze školy, ho na cestě překvapila prudká bouřka. V tu chvíli se zvedl silný vítr a obloha se začala zlověstně zatahovat. Tomáš se začal rozhlížet kolem, kam by se schoval, když tu najednou spatřil něco zvláštního. Na lavičce pod starým stromem ležel nádherný barevný deštník. Byla to zvláštní náhoda – deštník tu zůstal ležet, jako by čekal právě na něj.</p>
+
+            <p>Zrovna, když si ho Tomáš prohlížel, přistoupila k němu stará paní s milým úsměvem a tichým hlasem mu pověděla: „Tohle není obyčejný deštník, chlapče. Má kouzelnou moc. Pamatuj si ale, že každé kouzlo má svou cenu a je dobré ho používat moudře.“ Tomáš se podíval na deštník a chtěl se paní zeptat, co tím myslí, ale ona už tam zase nebyla. Zmizela tak tiše, jako se objevila, což celou situaci udělalo ještě tajemnější.</p>
+
+            <p>Tomáš si deštník vzal, aby nezmokl, ale nevěřil, že by deštník mohl dokázat opravdu něco kouzelného. Dokud na cestě domů nepotkal sousedova pejska. Ten se hnal jako zběsilý za svým míčkem, který se kutálel z kopce dolů směrem k silnici. Tomáš najednou s hrůzou spatřil, že se blíží auto, a s obavami přihlížel, jak se pejsek rozběhl za míčkem přímo do silnice.</p>
+
+            <p>V ten moment, aniž by si to Tomáš uvědomil, deštník použil své kouzelné schopnosti. Tomáš si v tu chvílí totiž nejvíce přál, aby se Ronovi nic nestalo. Jakmile to deštník vycítil, stal se zázrak – míček se sám od sebe začal kutálet zpátky do kopce, jako by ho přitahovala nějaká neviditelná síla. Pejsek míček doběhl a otočil se k Tomášovi s radostným štěknutím. Auto projelo, aniž by si řidič vůbec všiml, co se právě stalo. Teprve tehdy Tomáš pochopil, že deštník skutečně dokáže něco kouzelného.</p>
+
+            <p>Od té doby používal deštník každý den a s nadšením sledoval, jak dokáže maličkými kouzly přinášet radost do života ostatních. Jednou pomohl svému kamarádovi najít ztracenou čepici, jindy pomohl sousedce uschovat květiny před prudkým deštěm tím, že je kouzelně přenesl pod střechu. Kdykoli Tomáš otevřel deštník, stalo se něco pěkného – lidé se usmívali, zvířata byla v bezpečí a každý den se tak trochu rozjasnil.</p>
+
+
+            <img src="boy-with-umbrella.png?height=300&width=500" alt="Kouzelný deštník">
+            <p>Jednoho dne ale Tomáš dostal nápad, že by mohl deštník použít pro sebe. Zrovna měli psát ve škole důležitý test, na který se téměř neučil. Cítil se trochu nesvůj, ale nakonec otevřel deštník a přál si, aby dostal nejlepší známku. Kouzlo opět zafungovalo – když učitelka rozdala opravené testy, měl Tomáš na svém testu krásnou jedničku. Ale k jeho překvapení všichni ostatní spolužáci, kteří test psali, vypadali smutně. Na jejich papírech byly prázdné řádky, jako by jim všechny odpovědi zmizely. Tomáš si brzy všiml, že jeho kamarádka Anička dokonce plakala, protože se na test dlouho připravovala a teď měla strach, že dostane špatnou známku. Ostatní spolužáci si na něj stěžovali, že kvůli jeho kouzlu přišli o možnost uspět.</p>
+
+            <p>To všechno Tomáše tížilo u srdce a začalo ho hryzat svědomí. Způsobil přece smutek svým kamarádům, a to kvůli svému vlastnímu přání. Uvědomil si, že když deštník používá jen pro sebe, může nevědomky ubližovat ostatním. Proto se rozhodl, že kouzlo vrátí zpět.</p>
+
+            <p>Otevřel deštník a přál si, aby se vše vrátilo do původního stavu. Jakmile to řekl, všichni spolužáci uviděli své opravené testy s výsledky, které si zasloužili, a na jejich tvářích se objevil úsměv. Tomášova jednička se změnila na známku, kterou by získal i bez kouzel, a to mu přineslo mnohem větší pocit radosti a spokojenosti.</p>
+
+            <p>Od toho dne Tomáš pochopil, že největší radost člověku přináší, když může pomáhat ostatním, a ne jen plnit vlastní přání na úkor druhých. Přál si, aby kouzelný deštník pomáhal těm, kteří to opravdu potřebují.</p>
         </div>
     </main>
     <script>
