--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three Tale Stories</title>
+    <title>Pohádky na dobrou noc</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+			background: linear-gradient(to right, #f4f4f4, #e0e0e0);
         }
         header {
             background-color: #333;
