Added questions and tasks for forest story

--- a/index.html
+++ b/index.html
@@ -137,6 +137,26 @@
             <p>Děti nejprve nevěděly, jestli je to dar, nebo prokletí. Musely se naučit jeden na druhého dávat pozor a starat se, aby nikdo neprožíval příliš velké trápení. Přineslo jim to nové porozumění a pocit sounáležitosti, ale také odpovědnost. A tak pochopily, že i u přátelství je důležité mít rovnováhu, aby mohly prožívat společné radosti i bolesti, ale zároveň zůstat samy sebou.</p>
 
             <p>Od té doby byly jejich dny plné nejen legrace a dobrodružství, ale i ohleduplnosti a pochopení.</p>
+            
+            <hr>
+            <h2>Otázky k zamyšlení:</h2>
+            <ul>
+              <li><strong>Proč se děti rozhodly hledat Strom přání?</strong> Co je k tomu vedlo, a co očekávaly, že najdou?</li>
+              <li><strong>Jaký měl Jakubův příběh následek?</strong> Proč pro něj létání nebylo tak zábavné, jak si původně myslel?</li>
+              <li><strong>Které přání bylo podle tebe nejzajímavější?</strong> Vysvětli, proč tě zaujalo, a jaký přineslo důsledek.</li>
+              <li><strong>Jaký byl následný efekt Eliščina přání?</strong> Jak to změnilo vztah mezi dětmi a co je to naučilo o přátelství?</li>
+              <li><strong>Které přání bylo podle tebe nejnebezpečnější?</strong> Myslíš, že některé z dětí litovalo svého přání? Proč?</li>
+            </ul>
+
+<h2>Úkoly k vypracování:</h2>
+<ol>
+  <li><strong>Napiš další přání, které by si děti mohly přát, a vymysli k němu odpovídající následek.</strong> Jak by ovlivnilo jejich přátelství nebo to, co se naučily o Stromu přání?</li>
+  <li><strong>Vytvoř mapu kouzelného lesa, která ukazuje cestu dětí ke Stromu přání.</strong> Představ si, jak asi les vypadal, a nakresli ho – přidej další zajímavé části lesa, například tajemnou jeskyni nebo lesní jezírko.</li>
+  <li><strong>Napiš dopis jednomu z dětí od Stromu přání.</strong> Strom přání může v dopise vysvětlit, proč mají přání následky, a co se děti učí díky svým zkušenostem.</li>
+  <li><strong>Vymysli pravidlo, které by Strom přání mohl stanovit pro další návštěvníky.</strong> Jaké podmínky nebo pravidla by strom mohl přidat, aby lidé lépe porozuměli následkům svých přání?</li>
+  <li><strong>Zamysli se nad tím, jak by mohl příběh pokračovat, kdyby děti Strom přání navštěvovaly dál.</strong> Napiš krátký odstavec o dalším přání nebo dobrodružství, které by mohly zažít.</li>
+</ol>
+
 
         </div>
         <div id="story3" class="story">
