Third story name change to not resamble second story name

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         </div>
         <div id="story3" class="story">
-            <h2>Kouzelný deštník</h2>
+            <h2>Čarovný deštník</h2>
             <p>Jednoho dne, když se Tomáš vracel ze školy, ho na cestě překvapila prudká bouřka. V tu chvíli se zvedl silný vítr a obloha se začala zlověstně zatahovat. Tomáš se začal rozhlížet kolem, kam by se schoval, když tu najednou spatřil něco zvláštního. Na lavičce pod starým stromem ležel nádherný barevný deštník. Byla to zvláštní náhoda – deštník tu zůstal ležet, jako by čekal právě na něj.</p>
 
             <p>Zrovna, když si ho Tomáš prohlížel, přistoupila k němu stará paní s milým úsměvem a tichým hlasem mu pověděla: „Tohle není obyčejný deštník, chlapče. Má kouzelnou moc. Pamatuj si ale, že každé kouzlo má svou cenu a je dobré ho používat moudře.“ Tomáš se podíval na deštník a chtěl se paní zeptat, co tím myslí, ale ona už tam zase nebyla. Zmizela tak tiše, jako se objevila, což celou situaci udělalo ještě tajemnější.</p>
