--- a/index.html
+++ b/index.html
@@ -4,72 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pohádky na dobrou noc</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-			background: linear-gradient(to right, #f4f4f4, #e0e0e0);
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #444;
-            padding: 0.5rem;
-        }
-        nav button {
-            background-color: #555;
-            color: #fff;
-            border: none;
-            padding: 0.5rem 1rem;
-            margin: 0 0.5rem;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        nav button:hover {
-            background-color: #666;
-        }
-        main {
-            padding: 2rem;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        .story {
-            background-color: #fff;
-            border-radius: 5px;
-            padding: 2rem;
-            margin-bottom: 2rem;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            display: none;
-        }
-        .story.active {
-            display: block;
-        }
-        .story img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
-            margin-bottom: 1rem;
-        }
-        .image-container {
-            text-align: center;
-            margin: 1rem 0;
-        }
-        h2 {
-            color: #333;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Pohádky na dobrou noc</h1>
+        <div class="header-content">
+            <h1>Pohádky na dobrou noc</h1>
+        </div>
+        <div id="fairy-container"></div>
     </header>
     <nav>
         <button onclick="showStory(0)">Pohádka o králíkovi</button>
@@ -202,6 +145,40 @@
                     story.classList.remove('active');
                 }
             });
+        }
+    </script>
+    <script>
+        function createFairy() {
+            const fairy = document.createElement('div');
+            fairy.className = 'fairy';
+
+            const startX = Math.random() * window.innerWidth;
+            const startY = Math.random() * 200;
+
+            fairy.style.left = startX + 'px';
+            fairy.style.top = startY + 'px';
+
+            const trail = document.createElement('div');
+            trail.className = 'fairy-trail';
+            fairy.appendChild(trail);
+
+            const duration = 3 + Math.random() * 4;
+            const delay = Math.random() * 2;
+
+            fairy.style.animationDuration = `${duration}s`;
+            fairy.style.animationDelay = `${delay}s`;
+
+            document.getElementById('fairy-container').appendChild(fairy);
+
+            setTimeout(() => {
+                fairy.remove();
+                createFairy();
+            }, duration * 1000);
+        }
+
+        // Create initial fairies
+        for (let i = 0; i < 15; i++) {
+            setTimeout(() => createFairy(), i * 200);
         }
     </script>
 </body>
