Style changes: text font, header height, button sizes

--- a/index.html
+++ b/index.html
@@ -69,11 +69,15 @@
             <h2>Kouzelný les přání</h2>
             <p>Byl jednou jeden kouzelný les, o kterém si všichni šeptali, že tam roste Strom přání. Místní děti o něm slýchaly už roky, ale nikdo přesně nevěděl, kde je, ani jestli opravdu existuje. Jednoho podzimního dne, kdy les vypadal jako záplava zlatých a rudých listů, se čtyři kamarádi – Terezka, Jakub, Eliška a Filip – rozhodli les prozkoumat. Slyšeli, že když někdo najde Strom přání, může si přát jedno přání za den, ale každé přání s sebou nese nějaký důsledek. Většina dospělých říkala, že je to jen povídačka, ale děti tomu chtěly přijít na kloub.</p>
 
-            <img src="forest1.webp" alt="Deti v lese" style="height: 300px">
+            <div class="image-container">
+                <img src="forest1.webp" alt="Deti v lese" style="height: 300px">
+            </div>
 
             <p>Po několika hodinách bloudění mezi hustými stromy konečně objevily zvláštní místo. Uprostřed mýtiny, kde slunce prosvítalo skrze koruny stromů, stál obrovský strom s listy, které zářily všemi barvami duhy. Když děti přišly blíž, uslyšely tichý, melodický hlas, který jim pošeptal: „Kdo mě najde, může si přát, ale mějte na paměti, že každé přání přináší svůj následek.“</p>
 
-            <img src="forest2.webp" alt="Deti v lese" style="height: 300px">
+            <div class="image-container">
+                <img src="forest2.webp" alt="Deti v lese" style="height: 300px">
+            </div>
 
             <p>Děti se nadšeně podívaly na sebe a bez dlouhého rozmýšlení se rozhodly zkusit své štěstí. První se osmělil Jakub. „Přeji si, abych uměl létat!“ zvolal nadšeně. Sotva to dořekl, začal se vznášet nad zemí a smál se radostí. Ale jen o pár okamžiků později začal padat, protože zjistil, že nemůže létat nad zemí výš než metr. I přesto, že bylo létání omezující, Jakub byl nadšený, že zažil ten pocit.</p>
 
@@ -81,7 +85,9 @@
 
             <p>Třetí den se přání ujal Filip. Byl nejmladší a vždycky si přál být velký a silný jako jeho starší bratři. „Přeji si, abych byl hned dospělý,“ řekl. Najednou se před nimi objevil jako dospělý muž, vysoký a statný. Kamarádi zůstali v údivu. Ale hned si Filip uvědomil, že být dospělý není tak snadné. Cítil se těžký, unavený a nezvyklý na svou novou sílu. Nemohl se bavit jako dřív, hrát si a smát se s ostatními. Po několika hodinách prosil Strom přání, aby ho proměnil zpět, a Strom mu vyhověl. Filip se poučil, že všechno má svůj čas a že být dítětem je taky důležité.</p>
 
-            <img src="forest3.webp" alt="Deti u stromu" style="height: 500px">
+            <div class="image-container">
+                <img src="forest3.webp" alt="Deti u stromu" style="height: 500px">
+            </div>
 
             <p>Čtvrtý den přišla na řadu Eliška. Bála se přání vyslovit, ale přesto se odhodlala. „Přeji si, abychom zůstali kamarádi napořád,“ řekla. Strom se zhluboka rozzářil a listy na něm šustily jako vesele hrající hudba. Děti se na sebe usmály a pocítily zvláštní pouto, které je spojovalo.</p>
 
@@ -124,8 +130,10 @@
 
             <p>Od té doby používal deštník každý den a s nadšením sledoval, jak dokáže maličkými kouzly přinášet radost do života ostatních. Jednou pomohl svému kamarádovi najít ztracenou čepici, jindy pomohl sousedce uschovat květiny před prudkým deštěm tím, že je kouzelně přenesl pod střechu. Kdykoli Tomáš otevřel deštník, stalo se něco pěkného – lidé se usmívali, zvířata byla v bezpečí a každý den se tak trochu rozjasnil.</p>
 
+            <div class="image-container">
+                <img src="boy-with-umbrella.png?height=300&width=500" alt="Kouzelný deštník">
+            </div>
 
-            <img src="boy-with-umbrella.png?height=300&width=500" alt="Kouzelný deštník">
             <p>Jednoho dne ale Tomáš dostal nápad, že by mohl deštník použít pro sebe. Zrovna měli psát ve škole důležitý test, na který se téměř neučil. Cítil se trochu nesvůj, ale nakonec otevřel deštník a přál si, aby dostal nejlepší známku. Kouzlo opět zafungovalo – když učitelka rozdala opravené testy, měl Tomáš na svém testu krásnou jedničku. Ale k jeho překvapení všichni ostatní spolužáci, kteří test psali, vypadali smutně. Na jejich papírech byly prázdné řádky, jako by jim všechny odpovědi zmizely. Tomáš si brzy všiml, že jeho kamarádka Anička dokonce plakala, protože se na test dlouho připravovala a teď měla strach, že dostane špatnou známku. Ostatní spolužáci si na něj stěžovali, že kvůli jeho kouzlu přišli o možnost uspět.</p>
 
             <p>To všechno Tomáše tížilo u srdce a začalo ho hryzat svědomí. Způsobil přece smutek svým kamarádům, a to kvůli svému vlastnímu přání. Uvědomil si, že když deštník používá jen pro sebe, může nevědomky ubližovat ostatním. Proto se rozhodl, že kouzlo vrátí zpět.</p>
