Third story design changes

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <p>Od té doby používal deštník každý den a s nadšením sledoval, jak dokáže maličkými kouzly přinášet radost do života ostatních. Jednou pomohl svému kamarádovi najít ztracenou čepici, jindy pomohl sousedce uschovat květiny před prudkým deštěm tím, že je kouzelně přenesl pod střechu. Kdykoli Tomáš otevřel deštník, stalo se něco pěkného – lidé se usmívali, zvířata byla v bezpečí a každý den se tak trochu rozjasnil.</p>
 
             <div class="image-container">
-                <img src="boy-with-umbrella.png?height=300&width=500" alt="Kouzelný deštník">
+                <img src="boy-with-umbrella.png?height=300&width=500" alt="Kouzelný deštník" style="width: 400px; height: auto;">
             </div>
 
             <p>Jednoho dne ale Tomáš dostal nápad, že by mohl deštník použít pro sebe. Zrovna měli psát ve škole důležitý test, na který se téměř neučil. Cítil se trochu nesvůj, ale nakonec otevřel deštník a přál si, aby dostal nejlepší známku. Kouzlo opět zafungovalo – když učitelka rozdala opravené testy, měl Tomáš na svém testu krásnou jedničku. Ale k jeho překvapení všichni ostatní spolužáci, kteří test psali, vypadali smutně. Na jejich papírech byly prázdné řádky, jako by jim všechny odpovědi zmizely. Tomáš si brzy všiml, že jeho kamarádka Anička dokonce plakala, protože se na test dlouho připravovala a teď měla strach, že dostane špatnou známku. Ostatní spolužáci si na něj stěžovali, že kvůli jeho kouzlu přišli o možnost uspět.</p>
@@ -141,6 +141,26 @@
             <p>Otevřel deštník a přál si, aby se vše vrátilo do původního stavu. Jakmile to řekl, všichni spolužáci uviděli své opravené testy s výsledky, které si zasloužili, a na jejich tvářích se objevil úsměv. Tomášova jednička se změnila na známku, kterou by získal i bez kouzel, a to mu přineslo mnohem větší pocit radosti a spokojenosti.</p>
 
             <p>Od toho dne Tomáš pochopil, že největší radost člověku přináší, když může pomáhat ostatním, a ne jen plnit vlastní přání na úkor druhých. Přál si, aby kouzelný deštník pomáhal těm, kteří to opravdu potřebují.</p>
+
+            <hr>
+            <h2>Otázky k zamyšlení:</h2>
+            <ul>
+                <li><strong>Jaký pocit měl Tomáš, když poprvé zjistil, že deštník má kouzelné schopnosti?</strong> Jaké myšlenky mu běžely hlavou, když viděl, jak míček poskočil zpět?</li>
+                <li><strong>Co Tomáš zjistil o důsledcích používání deštníku pro vlastní prospěch?</strong> Jak mu to ovlivnilo vztah k ostatním?</li>
+                <li><strong>Jaké situace Tomáš zažil při používání deštníku k pomoci ostatním?</strong> Které z jeho kouzel nejvíce ovlivnily jeho okolí?</li>
+                <li><strong>Jak se Tomáš změnil během svého dobrodružství s deštníkem?</strong> Jaký důležitý životní lekce si odnesl?</li>
+                <li><strong>Jaké by mohly být alternativní způsoby, jak by Tomáš mohl pomáhat ostatním bez kouzelného deštníku?</strong> Co by se naučil tímto způsobem?</li>
+            </ul>
+
+            <h2>Úkoly k vypracování:</h2>
+            <ol>
+                <li><strong>Napiš příběh o jiném dítěti, které také našlo kouzelný předmět.</strong> Jaké kouzlo by tento předmět měl a jak by to ovlivnilo jeho život a život ostatních?</li>
+                <li><strong>Vytvoř ilustraci Tomášova dobrodružství s deštníkem.</strong> Zobraz různé situace, kdy deštník pomáhal lidem, a vyjádři, jaký to mělo dopad na Tomášovy přátele.</li>
+                <li><strong>Napiš dopis Tomášovi od staré paní, která mu deštník dala.</strong> Jaké rady by mu mohla poskytnout ohledně používání kouzel a odpovědnosti?</li>
+                <li><strong>Vymysli nové pravidlo pro používání kouzelného deštníku.</strong> Jak by Tomáš mohl zajistit, aby jeho kouzla byla prospěšná pro všechny kolem?</li>
+                <li><strong>Zamysli se nad tím, co by se stalo, kdyby Tomáš deštník ztratil.</strong> Jak by se vyrovnal se situací a jak by mu chybělo jeho kouzelné zařízení?</li>
+            </ol>
+
         </div>
     </main>
     <script>
