~ faq for rabbit tale

--- a/rabbit-tale.html
+++ b/rabbit-tale.html
@@ -32,7 +32,7 @@
             <p>„Sluneční amulet!“ zašeptal nadšeně a rozběhl se zpátky do království. Cesta zpět byla obtížná a temná, ale amulet v jeho tlapkách zářil a ukazoval mu cestu.</p>
 
             <div class="image-container">
-                <img src="rabbit-cave.png" height="300" width="500" alt="Králík v lese">
+                <img src="rabbit-with-amulet.png" height="200" width="500" alt="Králík s amuletem">
             </div>
             
             <p>Když dorazil domů, celé království bylo ponořené do temnoty a královna Luna smutně stála na balkóně. Timík zvedl amulet nad hlavu a zvolal: „Slunce, zhasni tuto temnotu a vrať nám světlo!“</p>
@@ -40,3 +40,18 @@
             <p>Amulet začal zářit a z jeho světla se zvedl sluneční paprsek, který prolomil temné mraky. Slunce se vrátilo na oblohu a království bylo opět zalité světlem. Královna Luna Timíkovi děkovala a všichni králíci se radovali a oslavovali návrat slunce.</p>
                 
             <p>Od toho dne byl Timík v králičím království znám jako hrdina, který měl odvahu čelit temnotě. A sluneční amulet? Ten zůstal vystavený v královnině síni jako připomínka toho, že i malý králík může dokázat velké věci, když má odhodlání a dobrou duši.</p>
+
+            <hr>
+            <h2>Otázky k zamyšlení:</h2>
+            <ul>
+              <li><strong>Proč se Timík rozhodl jít do strašidelného lesa? </strong> Co ho motivovalo pokračovat i přesto, že se bál?</li>
+			  <li><strong>Kdo Timíkovi pomáhal v lese?</strong>Jak mu každá bytost přispěla k dosažení cíle?</li>
+			  <li><strong>Jaké vlastnosti Timík ukázal během svého dobrodružství?</strong>Proč jsou tyto vlastnosti důležité?</li>
+            </ul>
+
+			<h2>Úkoly k vypracování:</h2>
+			<ol>
+				<li><strong>Namaluj, co Timík viděl ve strašidelném lese.</strong>Můžeš namalovat jak vypadal strašidelný les s tancujícími stíny, zpívajícími květinami a kouzelnými žaludy...</li>
+				<li><strong>Vymysli a napiš, co by Timík udělal, kdyby se potkal s dalším zvířátkem v lese, a jak by mu mohlo pomoci.</strong> Můžeš rozvinout příběh podle vlastní fantazie a zapojit novou postavu, která by Timíkovi pomohla nebo mu nabídla radu.</li>
+				<li><strong>Vytvoř vlastní amulet, který by pomohl tvému království.</strong>Přemýšlej o tom, co by všechno dokázal.</li>
+			</ol>		
