~ audio on rabbit page, presentation

--- a/rabbit-tale.html
+++ b/rabbit-tale.html
@@ -1,4 +1,11 @@
 <h2>Králičí království a sluneční amulet</h2>
+
+<audio id="audioPlayer" src="rabbit-tale.mp3" type="audio/mpeg"></audio>
+
+<!-- Button to play audio -->
+<button onclick="playAudio()">Play Audio</button>
+<button onclick="stopAudio()">Stop Audio</button>
+
             <p>Bylo nebylo. V králičím království, kde pole byla vždy zalitá slunečním světlem a louky plné barevných květů, žili králíci šťastně pod vládou moudré královny Luny. Všechno bylo krásné a plné života, dokud jednoho dne nenastal záhadný úkaz. Obloha se najednou zahalila do tmavých mraků a slunce zmizelo. Dny se proměnily v nekonečnou noc, a králíci začali mít strach.</p>
                 
             <p>Malý králík jménem Timík, který měl zvídavé oči a kurážné srdce, si povšiml, že království je stále temnější a že královna Luna začíná ztrácet naději. Když jednoho večera poslouchal staré příběhy od své babičky, uslyšel o magickém amuletu, který prý dokáže přivolat sluneční světlo i v té nejtemnější hodině. Tento sluneční amulet se prý skrývá hluboko v jeskyni za temným lesem.</p>
@@ -45,13 +52,13 @@
             <h2>Otázky k zamyšlení:</h2>
             <ul>
               <li><strong>Proč se Timík rozhodl jít do strašidelného lesa? </strong> Co ho motivovalo pokračovat i přesto, že se bál?</li>
-			  <li><strong>Kdo Timíkovi pomáhal v lese?</strong>Jak mu každá bytost přispěla k dosažení cíle?</li>
-			  <li><strong>Jaké vlastnosti Timík ukázal během svého dobrodružství?</strong>Proč jsou tyto vlastnosti důležité?</li>
+			  <li><strong>Kdo Timíkovi pomáhal v lese? </strong> Jak mu každá bytost přispěla k dosažení cíle?</li>
+			  <li><strong>Jaké vlastnosti Timík ukázal během svého dobrodružství? </strong> Proč jsou tyto vlastnosti důležité?</li>
             </ul>
 
 			<h2>Úkoly k vypracování:</h2>
 			<ol>
-				<li><strong>Namaluj, co Timík viděl ve strašidelném lese.</strong>Můžeš namalovat jak vypadal strašidelný les s tancujícími stíny, zpívajícími květinami a kouzelnými žaludy...</li>
-				<li><strong>Vymysli a napiš, co by Timík udělal, kdyby se potkal s dalším zvířátkem v lese, a jak by mu mohlo pomoci.</strong> Můžeš rozvinout příběh podle vlastní fantazie a zapojit novou postavu, která by Timíkovi pomohla nebo mu nabídla radu.</li>
-				<li><strong>Vytvoř vlastní amulet, který by pomohl tvému království.</strong>Přemýšlej o tom, co by všechno dokázal.</li>
+				<li><strong>Namaluj, co Timík viděl ve strašidelném lese. </strong> Můžeš namalovat jak vypadal strašidelný les s tancujícími stíny, zpívajícími květinami a kouzelnými žaludy...</li>
+				<li><strong>Vymysli a napiš, co by Timík udělal, kdyby se potkal s dalším zvířátkem v lese, a jak by mu mohlo pomoci. </strong> Můžeš rozvinout příběh podle vlastní fantazie a zapojit novou postavu, která by Timíkovi pomohla nebo mu nabídla radu.</li>
+				<li><strong>Vytvoř vlastní amulet, který by pomohl tvému království. </strong> Přemýšlej o tom, co by všechno dokázal.</li>
 			</ol>		
