--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <button onclick="showStory(2)">Čarovný deštník</button>
     </nav>
     <main>
-        <div id="story1" class="story active">
+        <div id="story1" class="story">
         </div>
-        <div id="story2" class="story">
+        <div id="story2" class="story active">
         </div>
         <div id="story3" class="story">
         </div>
@@ -73,6 +73,17 @@
         for (let i = 0; i < 15; i++) {
             setTimeout(() => createFairy(), i * 200);
         }
+
+		function playAudio() {
+			const audio = document.getElementById("audioPlayer");
+			audio.play();
+		}
+		
+		function stopAudio() {
+			const audio = document.getElementById("audioPlayer");
+			audio.pause();     // Pause the audio
+			audio.currentTime = 0; // Reset to the beginning
+		}		
     </script>
 </body>
 </html>
