Styling of text-to-speech buttons

--- a/rabbit-tale.html
+++ b/rabbit-tale.html
@@ -3,8 +3,10 @@
 <audio id="audioPlayer" src="rabbit-tale.mp3" type="audio/mpeg"></audio>
 
 <!-- Button to play audio -->
-<button onclick="playAudio()">Play Audio</button>
-<button onclick="stopAudio()">Stop Audio</button>
+<div class="tts-controls">
+<button onclick="playAudio()" class="tts-button play-button">Přehrát obsah</button>
+<button onclick="stopAudio()" class="tts-button pause-button">Stop</button>
+</div>
 
             <p>Bylo nebylo. V králičím království, kde pole byla vždy zalitá slunečním světlem a louky plné barevných květů, žili králíci šťastně pod vládou moudré královny Luny. Všechno bylo krásné a plné života, dokud jednoho dne nenastal záhadný úkaz. Obloha se najednou zahalila do tmavých mraků a slunce zmizelo. Dny se proměnily v nekonečnou noc, a králíci začali mít strach.</p>
                 
