--- a/umbrella-tale.html
+++ b/umbrella-tale.html
@@ -1,4 +1,15 @@
-<h2>Čarovný deštník</h2>
+			
+			<audio id="audioPlayer3" src="mp3/umbrela-tale.mp3" type="audio/mpeg"></audio>
+
+			<!-- Button to play audio -->
+			<div class="tts-controls">
+			<button onclick="playAudio3()" class="tts-button play-button">Přehrát</button>
+			<button onclick="stopAudio3()" class="tts-button pause-button">Stop</button>
+			<!-- Seek bar -->
+			<input type="range" id="seekBar3" class="seekBar" value="0" max="100" step="1" oninput="seekAudio3()">
+			</div>
+
+			<h2>Čarovný deštník</h2>
             <p>Jednoho dne, když se Tomáš vracel ze školy, ho na cestě překvapila prudká bouřka. V tu chvíli se zvedl silný vítr a obloha se začala zlověstně zatahovat. Tomáš se začal rozhlížet kolem, kam by se schoval, když tu najednou spatřil něco zvláštního. Na lavičce pod starým stromem ležel nádherný barevný deštník. Byla to zvláštní náhoda – deštník tu zůstal ležet, jako by čekal právě na něj.</p>
 
             <p>Zrovna, když si ho Tomáš prohlížel, přistoupila k němu stará paní s milým úsměvem a tichým hlasem mu pověděla: „Tohle není obyčejný deštník, chlapče. Má kouzelnou moc. Pamatuj si ale, že každé kouzlo má svou cenu a je dobré ho používat moudře.“ Tomáš se podíval na deštník a chtěl se paní zeptat, co tím myslí, ale ona už tam zase nebyla. Zmizela tak tiše, jako se objevila, což celou situaci udělalo ještě tajemnější.</p>
@@ -10,7 +21,7 @@
             <p>Od té doby používal deštník každý den a s nadšením sledoval, jak dokáže maličkými kouzly přinášet radost do života ostatních. Jednou pomohl svému kamarádovi najít ztracenou čepici, jindy pomohl sousedce uschovat květiny před prudkým deštěm tím, že je kouzelně přenesl pod střechu. Kdykoli Tomáš otevřel deštník, stalo se něco pěkného – lidé se usmívali, zvířata byla v bezpečí a každý den se tak trochu rozjasnil.</p>
 
             <div class="image-container">
-                <img src="boy-with-umbrella.png?height=300&width=500" alt="Kouzelný deštník" style="width: 400px; height: auto;">
+                <img src="img/boy-with-umbrella.png?height=300&width=500" alt="Kouzelný deštník" style="width: 400px; height: auto;">
             </div>
 
             <p>Jednoho dne ale Tomáš dostal nápad, že by mohl deštník použít pro sebe. Zrovna měli psát ve škole důležitý test, na který se téměř neučil. Cítil se trochu nesvůj, ale nakonec otevřel deštník a přál si, aby dostal nejlepší známku. Kouzlo opět zafungovalo – když učitelka rozdala opravené testy, měl Tomáš na svém testu krásnou jedničku. Ale k jeho překvapení všichni ostatní spolužáci, kteří test psali, vypadali smutně. Na jejich papírech byly prázdné řádky, jako by jim všechny odpovědi zmizely. Tomáš si brzy všiml, že jeho kamarádka Anička dokonce plakala, protože se na test dlouho připravovala a teď měla strach, že dostane špatnou známku. Ostatní spolužáci si na něj stěžovali, že kvůli jeho kouzlu přišli o možnost uspět.</p>
